PROJECT (FEM)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FILE(GLOB LIB_SRC "src/*.cpp")

if(LINUX)
  ADD_DEFINITIONS(--std=c++0x)
endif()

ADD_LIBRARY (femlib ${LIB_SRC})
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/../include")
SET(LIB_TYPE STATIC)	#set the lib type
