cmake_minimum_required(VERSION 3.0)

set(BIN ImguiExample)
set(CMAKE_CXX_STANDARD 20)
file(GLOB_RECURSE SRC "*.cpp" "*.h")
include_directories("../Math/inc")
include_directories("../Mesh/inc")

include_directories("extern/imgui")
include_directories("extern/glfw3.3.8")
include_directories("extern/glew-2.1.0")
link_directories("extern/glew-2.1.0")
add_subdirectory("extern/imgui")
include_directories("extern/imgui/backends")
link_directories("extern/glfw3.3.8")
add_compile_options("/std:c++latest")
include_directories("inc")

list(FILTER SRC EXCLUDE REGEX "[.+/]?main.cpp")

add_library("threecp" ${SRC})
if (NOT TARGET Mesh)
  message(STATUS "add mesh lib")
  add_subdirectory("../Mesh/" "Mesh")
endif()
if (NOT TARGET Util)
  add_subdirectory("../Util/" "Util")
endif()
include_directories("../ImageIO")
include_directories("../Util")
add_subdirectory("../ImageIO/" "ImageIO")
